# Projetos-Academicos

Algoritmos e estruturas de dados/: Sistema de Suporte de uma Rede Ferroviária (1)(1).docx
Algoritmos e estruturas de dados/Projeto Fase 1 e 2/: Main.java
Algoritmos e estruturas de dados/Projeto Fase 1 e 2/TrainStation/: Comparator.java  (+14 more)
Arquitetura de Computadores/TPC1 24-25/: isText.c  tpc1.sh
Arquitetura de Computadores/TPC2 24-25/: dorun_incompleto.c  p.code  sim  sim.c
Arquitetura de Computadores/TPC3 24-25/: Makefile  cryptTEA  cryptTEA.c  decryptTEA  decryptTEA.c  genKey  genKey.c  key  tea.s  yyy  zzz
Arquitetura de Computadores/TPC4 24-25/: Makefile  main  main.c  myAlloc.h  myAlloc.s
Linguagens e ambientes de programação/Projeto 1/proj1-darts-68211-main/proj1-darts-68211-main/test/: dune  test_bullseye.ml
Linguagens e ambientes de programação/Projeto 1/proj1-darts-68211-main/proj1-darts-68211-main/test/expected/: task1_164.expected  task1_170.expected  task1_25.expected  task1_4.expected  task1_42.expected  task1_5.expected  task1_6.expected  task1_64.expected  task1_73.expected  task1_8.expected  task1_81.expected  task2_164.expected  task2_25.expected  task2_3.expected  task2_42.expected  task2_5.expected  task2_6.expected  task2_64.expected  task2_73.expected  task2_8.expected  task2_81.expected
Linguagens e ambientes de programação/Projeto 2 e 3/project-2-and-3-petri-nets-68211_68301-main/project-2-and-3-petri-nets-68211_68301-main/test/: coffeemachine.ml  dune  test_petrinets_p2.ml  test_petrinets_p3.ml  unit_tests_p2.ml  unit_tests_p3.ml
(+101 files in other folders)
